# AutoTestSystem

./: .gitignore  CMakeLists.txt  client.cpp  main.cpp
TCP/jrlcClient/: Application.cpp  Application.hpp  FTPClient.cpp  FTPClient.hpp  Message.cpp  Message.hpp  TCPClient.cpp  TCPClient.hpp
TCP/jrlcServer/: CMakeLists.txt  TCPServer.cpp  TCPServer.hpp
include/: CMakeLists.txt  dataProcess.hpp
include/source/: config.json
include/source/CPUInfo/: cpu.json
lib_arm64/: libjsoncpp.so.1.9.5
src/: dataProcess.cpp
